kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: henkaipan
  labels:
    name: henkaipan
    app.kubernetes.io/name: henkaipan
    app.kubernetes.io/part-of: henkaipan-aspm
