kubernetes/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: henkaipan
  labels:
    app: henkaipan-worker
    app.kubernetes.io/name: henkaipan
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: henkaipan-worker
  template:
    metadata:
      labels:
        app: henkaipan-worker
    spec:
      automountServiceAccountToken: false
      containers:
        - name: worker
          image: ghcr.io/dyallab/henkaipan-worker:1.39.2
          imagePullPolicy: Always
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: home
              mountPath: /home/worker
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "4Gi"
              cpu: "2000m"
              ephemeral-storage: "2Gi"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: tmp
          emptyDir: {}
        - name: home
          emptyDir: {}
